force-app/main/default/objects/THOR_Maintenance_Item__c.object
<CustomObject>
    <fields>
        <fullName>FL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FL</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Maintenance Item</relationshipLabel>
        <relationshipName>Maintenance_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Maintenance Item</relationshipLabel>
        <relationshipName>Maintenance_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>groupCount__c</fullName>
        <label>groupCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itemNo__c</fullName>
        <label>itemNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mainWorkCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mainWorkCenter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Main Work Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Maintenance Item (mainWorkCenter)</relationshipLabel>
        <relationshipName>Maintenance_Item3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maintenanceActivityType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>maintenanceActivityType</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>MaintActivityType</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Maintenance Item (maintenanceActivityType)</relationshipLabel>
        <relationshipName>Maintenance_Item2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maintenancePlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>maintenancePlant</label>
        <referenceTo>THOR_Maintenance_Plan__c</referenceTo>
        <relationshipLabel>Maintenance Item</relationshipLabel>
        <relationshipName>Maintenance_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>orderType__c</fullName>
        <label>orderType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>plannerGroup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>PlannerGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Maintenance Item (plannerGroup)</relationshipLabel>
        <relationshipName>Maintenance_Item1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>planningPlant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>planningPlant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Maintenance Item</relationshipLabel>
        <relationshipName>Maintenance_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>strategy__c</fullName>
        <label>strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tGroup__c</fullName>
        <label>tGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taskListType__c</fullName>
        <label>taskListType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maintenance Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maintenance Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>